scripts/openshift/dataretrieval-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataretrieval
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataretrieval
  template:
    metadata:
      labels:
        app: dataretrieval
    spec:
      containers:
      - name: dataretrieval
        image: YOUR_REGISTRY/dataretrieval:latest
        ports:
        - containerPort: 8000
