scripts/openshift/enricher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enricher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enricher
  template:
    metadata:
      labels:
        app: enricher
    spec:
      containers:
      - name: enricher
        image: YOUR_REGISTRY/enricher:latest
