scripts/openshift/persister-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: persister
  template:
    metadata:
      labels:
        app: persister
    spec:
      containers:
      - name: persister
        image: YOUR_REGISTRY/persister:latest
