scripts/openshift/preprocessor-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preprocessor
  template:
    metadata:
      labels:
        app: preprocessor
    spec:
      containers:
      - name: preprocessor
        image: YOUR_REGISTRY/preprocessor:latest
