scripts/openshift/retriever-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retriever
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retriever
  template:
    metadata:
      labels:
        app: retriever
    spec:
      containers:
      - name: retriever
        image: YOUR_REGISTRY/retriever:latest
