scripts/openshift/dataretrieval-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataretrieval
spec:
  selector:
    app: dataretrieval
  ports:
  - port: 8000
    targetPort: 8000
