scripts/openshift/dataretrieval-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dataretrieval
spec:
  to:
    kind: Service
    name: dataretrieval
  port:
    targetPort: 8000
  tls:
    termination: edge
